test to fix content loading on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,7 +102,7 @@ a {
   margin-bottom: 8px;
 }
 
-a:hover {
+a:hover :not(.image-holder-link) {
   border-bottom: solid 2px var(--black);
 }
 
@@ -117,6 +117,15 @@ img {
   width: 90vw;
   height: 300px;
 }
+
+.image-holder-link {
+  display: block;
+  max-width: 470px;
+  width: 90vw;
+  height: 300px;
+  z-index: 2;
+}
+
 
 /* Dark theme styles */
 
